--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,9 @@
 
             <h1 class="blog-title light" itemprop="name">
                 {{ site.title }}
+
+            <h1 class="blog-title light" itemprop="name">
+                {{ site.title }}
             </h1>
                 
             </a>
