--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         <div class="container">
             <a class="brand light" href="{{ site.url }}" role="banner" itemprop="url">
                 
-                    <img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}" alt="{{ site.title }} Logo" />
+                    <img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}" />
 
             <h1 class="blog-title light" itemprop="name">
                 {{ site.title }}
@@ -24,7 +24,7 @@
         <div class="container">
             <a class="brand" href="{{ site.url }}" role="banner" itemprop="url">
                 
-                    <img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}" alt="{{ site.title }} Logo" />
+                    <img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}"/>
 
             <h1 class="blog-title light" itemprop="name">
                 {{ site.title }}
