First setup of the site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,9 +48,9 @@
                     <i class="icon-flickr"></i>
                 </a>
             </li>{% endif %}
-            {% if site.owner.github %}<li>
-                <a href="http://github.com/{{ site.owner.github }}" data-toggle="tooltip" title="{{ site.owner.name}} on Github" target="_blank">
-                    <i class="icon-github"></i>
+            {% if site.owner.linkedin %}<li>
+                <a href="http://linkedin.com/in/{{ site.owner.linkedin }}" data-toggle="tooltip" title="{{ site.owner.name}} on Linkedin" target="_blank">
+                    <i class="icon-linkedin"></i>
                 </a>
             </li>{% endif %}
         </ul>
