--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@
         <div class="container">
             <a class="brand" href="{{ site.url }}" role="banner" itemprop="url">
                 
-                    <img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}" alt="{{ site.title }} Logo" />
+                    <img itemprop="logo" src="{{ site.url }}/images/{{ site.logo }}"/>
 
             <h1 class="blog-title light" itemprop="name">
                 {{ site.title }}
